--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/31723676fb.js" crossorigin="anonymous"></script>
     <title>Framworks CA</title>
   </head>
   <body>
@@ -43,7 +44,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -236,9 +237,11 @@
       </div>
     </main class="tabs">
     
-  <div class="container">
-    <span class="text-muted">Place sticky footer content here.</span>
-  </div>
+    <footer>
+      <div><i class="fab fa-vimeo-v"></i></i><i class="fa fa-youtube"></i></div>
+      <div>hello@yay.com</div>
+      <div>Copyright 2021</div>
+  </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
