--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/31723676fb.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Framworks CA</title>
   </head>
   <body>
@@ -38,16 +42,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">News</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -102,9 +104,11 @@
         rows="3"
       ></textarea>
     </div>
-    <div class="container">
-      <span class="text-muted">Place sticky footer content here.</span>
-    </div>
+    <footer>
+        <div><i class="fab fa-vimeo-v"></i></i><i class="fa fa-youtube"></i></div>
+        <div>hello@yay.com</div>
+        <div>Copyright 2021</div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
