--- a/news.html
+++ b/news.html
@@ -1,164 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
-    <title>Framworks CA</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">The YAY Company</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">News</a>
-            </li>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-            <li class="nav-item">
-              <a class="nav-link">Contact</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">GO</button>
-          </form>
-        </div>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,500&display=swap"
+    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://kit.fontawesome.com/31723676fb.js" crossorigin="anonymous"></script>
+  <title>Framworks CA</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">The YAY Company</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">News</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+          <button class="btn btn-outline-success" type="submit">GO</button>
+        </form>
       </div>
-    </nav>
-    <main>
-        <h1>News</h1>
+    </div>
+  </nav>
+  <main>
+    <h1>News</h1>
     <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-  <div class="btn-group me-2" role="group" aria-label="First group">
-    <button type="button" class="btn btn-primary">1</button>
-    <button type="button" class="btn btn-primary">2</button>
-    <button type="button" class="btn btn-primary">3</button>
-    <button type="button" class="btn btn-primary">4</button>
-  </div>
-</main>
-    <div class="card-group">
-      <div class="card">
-        <img src="images/news/news-1.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Nunc porttitor vel</h5>
-          <p class="card-text">
-            Nunc malesuada eget est fringilla dapibus.
-          </p>
-          <button type="button" class="btn btn-primary">Primary</button>
+      <div class="btn-group me-2" role="group" aria-label="First group">
+        <button type="button" class="btn btn-primary">1</button>
+        <button type="button" class="btn btn-primary2">2</button>
+        <button type="button" class="btn btn-primary3">3</button>
+        <button type="button" class="btn btn-primary4">4</button>
+      </div>
+  </main>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="card">
+          <img src="images/news/news-1.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Nunc porttitor vel</h5>
+            <p class="card-text">
+              Nunc malesuada eget est fringilla dapibus.
+            </p>
+            <button type="button" class="btn btn-primary ">Primary</button>
+          </div>
         </div>
       </div>
-      <div class="card">
-        <img src="images/news/news-2.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Nunc porttitor vel</h5>
-          <p class="card-text">
-            Nunc malesuada eget est fringilla dapibus.
-          </p>
-          <button type="button" class="btn btn-primary">Primary</button>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="card">
+          <img src="images/news/news-2.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Nunc porttitor vel</h5>
+            <p class="card-text">
+              Nunc malesuada eget est fringilla dapibus.
+            </p>
+            <button type="button" class="btn btn-primary">Primary</button>
+          </div>
         </div>
       </div>
-      <div class="card">
-        <img src="images/news/news-3.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Nunc porttitor vel</h5>
-          <p class="card-text">
-            Nunc malesuada eget est fringilla dapibus.
-          </p>
-          <button type="button" class="btn btn-primary">Primary</button>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="card">
+          <img src="images/news/news-3.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Nunc porttitor vel</h5>
+            <p class="card-text">
+              Nunc malesuada eget est fringilla dapibus.
+            </p>
+            <button type="button" class="btn btn-primary">Primary</button>
+          </div>
         </div>
       </div>
-      <div class="card">
-        <img src="images/news/news-4.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Nunc porttitor vel</h5>
-          <p class="card-text">
-            Nunc malesuada eget est fringilla dapibus.
-          </p>
-          <button type="button" class="btn btn-primary">Primary</button>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="card">
+          <img src="images/news/news-4.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Nunc porttitor vel</h5>
+            <p class="card-text">
+              Nunc malesuada eget est fringilla dapibus.
+            </p>
+            <button type="button" class="btn btn-primary">Primary</button>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="card-group">
-      <div class="card">
-        <img src="images/news/news-5.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Nunc porttitor vel</h5>
-          <p class="card-text">
-            Nunc malesuada eget est fringilla dapibus.
-          </p>
-          <button type="button" class="btn btn-primary">Primary</button>
-        </div>
-      </div>
-      <div class="card">
-        <img src="images/news/news-6.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Nunc porttitor vel</h5>
-          <p class="card-text">
-           Nunc malesuada eget est fringilla dapibus.
-          </p>
-          <button type="button" class="btn btn-primary">Primary</button>
-        </div>
-      </div>
-      <div class="card">
-        <img src="images/news/news-7.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Nunc porttitor vel</h5>
-          <p class="card-text">
-           Nunc malesuada eget est fringilla dapibus.
-          </p>
-          <button type="button" class="btn btn-primary">Primary</button>
-        </div>
-      </div>
-      <div class="card">
-        <img src="images/news/news-8.jpg" class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Nunc porttitor vel</h5>
-          <p class="card-text">
-            Nunc malesuada eget est fringilla dapibus.
-          </p>
-          <button type="button" class="btn btn-primary">Primary</button>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <span class="text-muted">Place sticky footer content here.</span>
-    </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="card">
+          <img src="images/news/news-5.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Nunc porttitor vel</h5>
+            <p class="card-text">
+              Nunc malesuada eget est fringilla dapibus.
+            </p>
+            <button type="button" class="btn btn-primary">Primary</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="card">
+          <img src="images/news/news-6.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Nunc porttitor vel</h5>
+            <p class="card-text">
+              Nunc malesuada eget est fringilla dapibus.
+            </p>
+            <button type="button" class="btn btn-primary">Primary</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="card">
+          <img src="images/news/news-7.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Nunc porttitor vel</h5>
+            <p class="card-text">
+              Nunc malesuada eget est fringilla dapibus.
+            </p>
+            <button type="button" class="btn btn-primary">Primary</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="card">
+          <img src="images/news/news-8.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Nunc porttitor vel</h5>
+            <p class="card-text">
+              Nunc malesuada eget est fringilla dapibus.
+            </p>
+            <button type="button" class="btn btn-primary">Primary</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <main>
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+      <div class="btn-group me-2" role="group" aria-label="First group">
+        <button type="button" class="btn btn-primary">1</button>
+        <button type="button" class="btn btn-primary2">2</button>
+        <button type="button" class="btn btn-primary3">3</button>
+        <button type="button" class="btn btn-primary4">4</button>
+      </div>
+  </main>
+  <footer>
+
+    <div><i class="fab fa-vimeo-v"></i></i><i class="fa fa-youtube"></i></div>
+    <div>hello@yay.com</div>
+    <div>Copyright 2021</div>
+</footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
