--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,500&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/31723676fb.js"
