--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             role="tabpanel"
             aria-labelledby="nav-home-tab"
           >
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card mb-3" style="max-width: 100%;">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="images/tab/tab-1.jpg" class="img-fluid rounded-start" alt="...">
@@ -205,16 +205,20 @@
             role="tabpanel"
             aria-labelledby="nav-profile-tab"
           >
-            <p>
-              <strong
-                >This is some placeholder content the Profile tab's associated
-                content.</strong
-              >
-              Clicking another tab will toggle the visibility of this one for
-              the next. The tab JavaScript swaps classes to control the content
-              visibility and styling. You can use it with tabs, pills, and any
-              other <code>.nav</code>-powered navigation.
-            </p>
+          <div class="card mb-3" style="max-width: 100%;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="images/tab/tab-2.jpg" class="img-fluid rounded-start" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
           </div>
           <div
             class="tab-pane fade"
@@ -222,16 +226,21 @@
             role="tabpanel"
             aria-labelledby="nav-contact-tab"
           >
-            <p>
-              <strong
-                >This is some placeholder content the Contact tab's associated
-                content.</strong
-              >
-              Clicking another tab will toggle the visibility of this one for
-              the next. The tab JavaScript swaps classes to control the content
-              visibility and styling. You can use it with tabs, pills, and any
-              other <code>.nav</code>-powered navigation.
-            </p>
+          <div class="card mb-3" style="max-width: 100%;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="images/tab/tab-3.jpg" class="img-fluid rounded-start" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
           </div>
         </div>
       </div>
