--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,11 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">News</a>
+              <a class="nav-link" href="news.html">News</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link active" href="contact.html">Contact</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -68,6 +68,7 @@
     <main>
       <h1>Submit your details</h1>
     </main>
+    <div class="container-sm">
     <div class="mb-3">
       <label for="exampleFormControlInput1" class="form-label">Name</label>
       <input
@@ -105,6 +106,9 @@
         rows="3"
       ></textarea>
     </div>
+
+</div>
+
     <footer>
         <div><i class="fab fa-vimeo-v"></i></i><i class="fa fa-youtube"></i></div>
         <div>hello@yay.com</div>
