--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <main class="tabs">
       <div class="bd-example">
         <nav>
-          <div class="nav nav-tabs md-3" id="nav-tab" role="tablist">
+          <div class="nav nav-tabs md-3 sm-1" id="nav-tab" role="tablist">
             <button
               class="nav-link active"
               id="nav-home-tab"
